[package]
name = "gopen"
version = "1.1.0"
edition = "2021"
authors = ["libratiger<info@suinian.ai>"]
description = "A command-line tool to open Git repository remote URL in your browser"
license = "MIT"
repository = "https://github.com/libratiger/gopen"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
clap = { version = "4.5.9", features = ["derive"] }
